--- a/index.html
+++ b/index.html
@@ -4,4 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewpot" content="width=device-whidth, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Alurabooks</title>
 </head>
+
+<body>
+    <header>
+        
+    </header>
+</body>
